--- a/pages/2labrabDM.html
+++ b/pages/2labrabDM.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <title>ДМ л.р. 2</title>
     <link href="../styles/labrabs.css" type="text/css" rel="stylesheet">
 </head>
+
 <body>
     <header>
         <nav>
@@ -20,16 +22,15 @@
     <main>
         <div class="form">
             <div class="instuction">
-                Введите пары чисел (числа от 0 до 9)<br>
-                разделите все числа и пары пробелом<br>
+                Введите пары чисел (числа от 0 до 9)<br> Разделите числа пробелом<br> Разделите пары пробелом<br>
             </div>
             <form method="" action="">
                 <div class="input">
                     <p>Пары чисел</p>
-                    <input type="text" id="couples" value="" size="200"/>
+                    <input type="text" id="couples" value="" size="200" />
                 </div>
                 <div class="button">
-                    <input class="submit" type="button" value="Произвести рассчёты" onclick="res();"/>
+                    <input class="submit" type="button" value="Произвести рассчёты" onclick="res();" />
                 </div>
                 <p id="outResult"></p>
             </form>
@@ -38,7 +39,8 @@
     <footer>
         сайт создан в образовательных целях
     </footer>
-</div>
-<script src="../scripts/2лабаДМ.js"></script>
+    </div>
+    <script src="../scripts/2лабаДМ.js"></script>
 </body>
+
 </html>
