--- a/index.html
+++ b/index.html
@@ -1,43 +1,46 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <title>ДМ л.р. 1</title>
     <link href="styles/labrabs.css" type="text/css" rel="stylesheet">
 </head>
+
 <body>
-<header>
-    <nav>
-        <ul>
-            <li><a href="index.html">работа №1</a></li>
-            <li><a href="pages/2labrabDM.html">работа №2</a></li>
-            <li><a href="pages/3labrabDM.html">работа №3</a></li>
-            <li><a href="pages/4labrabDM.html">работа №4</a></li>
-            <li><a href="pages/5labrabDM.html">работа №5</a></li>
-        </ul>
-    </nav>
-</header>
-<main>
-    <div class="form">
-        <form method="" action="">
-            <div class="input">
-                <p>Первый массив</p>
-                <input type="text" id="m1" value="" size="200"/>
-            </div>
-            <div class="input">
-                <p>Второй массив</p>
-                <input type="text" id="m2" value="" size="200"/>
-            </div>
-            <div class="button">
-                <input class="submit" type="button" value="Произвести рассчёты" onclick="res();"/>
-            </div>
-            <p id="outResult"></p>
-        </form>
-    </div>
-</main>
-<footer>
-    сайт создан в образовательных целях
-</footer>
-<script src="scripts/1лабаДМ.js"></script>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.html">работа №1</a></li>
+                <li><a href="pages/2labrabDM.html">работа №2</a></li>
+                <li><a href="pages/3labrabDM.html">работа №3</a></li>
+                <li><a href="pages/4labrabDM(1).php">работа №4</a></li>
+                <li><a href="pages/5labrabDM.html">работа №5</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <div class="form">
+            <form method="" action="">
+                <div class="input">
+                    <p>Первый массив</p>
+                    <input type="text" id="m1" value="" size="200" />
+                </div>
+                <div class="input">
+                    <p>Второй массив</p>
+                    <input type="text" id="m2" value="" size="200" />
+                </div>
+                <div class="button">
+                    <input class="submit" type="button" value="Произвести рассчёты" onclick="res();" />
+                </div>
+                <p id="outResult"></p>
+            </form>
+        </div>
+    </main>
+    <footer>
+        сайт создан в образовательных целях
+    </footer>
+    <script src="scripts/1лабаДМ.js"></script>
 </body>
+
 </html>
