--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <li><a href="pages/2labrabDM.html">работа №2</a></li>
                 <li><a href="pages/3labrabDM.html">работа №3</a></li>
                 <li><a href="pages/4labrabDM(1).php">работа №4</a></li>
-                <li><a href="pages/5labrabDM.html">работа №5</a></li>
+                <li><a href="pages/5labrabDM.php">работа №5</a></li>
             </ul>
         </nav>
     </header>
