--- a/pages/3labrabDM.html
+++ b/pages/3labrabDM.html
@@ -14,8 +14,8 @@
                 <li><a href="../index.html">работа №1</a></li>
                 <li><a href="2labrabDM.html">работа №2</a></li>
                 <li><a href="3labrabDM.html">работа №3</a></li>
-                <li><a href="4labrabDM(1).php">работа №4</a></li>
-                <li><a href="5labrabDM.html">работа №5</a></li>
+                <li><a href="4labrabDM.php">работа №4</a></li>
+                <li><a href="5labrabDM.php">работа №5</a></li>
             </ul>
         </nav>
     </header>
